<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculaterSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_c">C</string>
    <string name="btn_bs">BS</string>
    <string name="btn_ac">AC</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_div">/</string>
    <string name="btn_mul">*</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_equal">=</string>
    <string name="btn_dot">.</string>

</resources>
