<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calcurator.MainActivity" >

    <TextView
        android:id="@+id/txtEdit1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="end" />

    <TextView
        android:id="@+id/txtEdit2"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnCopy"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_copy"
                />

            <Button
                android:id="@+id/btnAc"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_ac" />

            <Button
                android:id="@+id/btnBs"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_bs" />

            <Button
                android:id="@+id/btnC"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_c" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btn7"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/btn8"
                 android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/btn9"
                 android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_9" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_div" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btn4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/btn5"
                   android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_6" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_mul" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btn1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/btn2"
                 android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_3" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btn0"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_0" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_dot" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_equal" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/btn_plus" />
        </TableRow>
    </TableLayout>

</LinearLayout>